--- a/page-accessibility-check/src/test/resources/it/address-lookup-acceptance-tests/1580387531553/index.html
+++ b/page-accessibility-check/src/test/resources/it/address-lookup-acceptance-tests/1580387531553/index.html
@@ -1,2 +1,18 @@
+@*
+ * Copyright 2023 HM Revenue & Customs
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ *@
+
 <!DOCTYPE html>
 <html><head></head><body><pre style="word-wrap: break-word; white-space: pre-wrap;">{"auditRef":"ea8e77cb-901a-4453-87dc-dc6f0de83e64","id":"GB990091234615","address":{"lines":["11a Madeup Street","Testtown-upon-Test"],"postcode":"FX1 7RR","country":{"code":"GB","name":"United Kingdom"}}}</pre></body></html>
